src/objects/c2g__codaCurrencyRevaluationGroup__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpcurrencyrevaluation</customHelpPage>
    <description>Groups currency revaluations to be processed as a batch.</description>
    <fields>
        <fullName>c2g__AllGLAs__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Revalue all eligible GLAs.</description>
        <label>All GLAs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AutoPost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autopost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DisplayName__c</fullName>
        <label>Group Description</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Currency Revaluation Groups</relationshipLabel>
        <relationshipName>CurrencyRevaluationGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__RevalueHomeCurrency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should we revalue the home currency?</description>
        <label>Revalue Home Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ScheduledTime__c</fullName>
        <description>The time at which this group has been scheduled to run.</description>
        <label>Scheduled Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>UnitOfWork</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Currency Revaluation Group</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaCurrencyRevaluationGroup</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaCurrencyRevaluationGroup</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaCurrencyRevaluationGroup</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__DisplayName__c</columns>
        <columns>c2g__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CRGP{000000}</displayFormat>
        <label>Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Revaluation Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>